# hotline_miami_mod_manager

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/icons/: README.md
src/: actions.rs  change_configuration_path.rs  change_current_mod.rs  clear_configuration.rs  configs.rs  create_new_mod_folder.rs  exit.rs  functions.rs  get_desired_mod.rs  hotline_mod.rs  list_mods.rs  main.rs  manager.rs  replace_default_music.rs  replace_mod.rs  run_game.rs  select_mod.rs  use_default_settings.rs
src/configs/: current_mod_config.rs  mod.rs  paths_config.rs
src/replace_mod/: mod.rs  replace_mods.rs  replace_music.rs
