[package]
name = "hotline_miami_mod_manager"
version = "0.1.0"
edition = "2021"
include = ["assets/music/original.wad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
indicatif = "0.17.7"
inquire = "0.6.2"
tempfile = "3.8.1"
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
winres = "0.1.12"
