[package]
name = "hotline_miami_mod_manager"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
indicatif = "0.17.7"
inquire = "0.7.5"
thiserror = "1.0.60"

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
